@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US003

'class Platform {
'  -description
'}

class List_of_employees {

}

class Employee {
    name
    citizensCardNumber
    taxNumber
    adress
    email
    phone
    agency
}

class SystemAdministrator{
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" List of employees : has registered >
'Platform "1" -- "*" Category : defines >
List_of_employees "1" - "*" Employee : contains >
SystemAdministrator "1"--"1" List_of_employees:manages >
SystemAdministrator "1"-- "1..*"Employee:register >
@enduml